ncc/testsuite/positive/extension-methods-lib.n
// OPTIONS: -t:library
#pragma indent
using System.Console

public class A
  public v : int
  public this (v : int)
    this.v = v
  public foo () : void
    Write ("foo()\n")

public class B
  public static foo (this a : A, p : int) : void
    Write ($"foo($(a.v),$p)\n")

  public static Run () : void
    def a = A (42)
    a.foo ()
    a.foo (1)
    B.foo (a, 2)
